Solved horizontal scroll and sticky navbar issue

--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,7 @@
-@import "tailwindcss";
 @import url("https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap");
+@import "tailwindcss";
 
 body {
   font-family: "Geist", sans-serif;
   font-optical-sizing: auto;
-}
-
-html,
-body {
-  overflow-x: hidden;
 }
